--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 STSTStudentCourse.postman_collection.json=@STSTStudentCourse.postman_collection.json,0
+STSTStudentCourse.postman_collection .json -Task 7=@STSTStudentCourse.postman_collection .json -Task 7,0
