Added an updated task 6

--- a/desktop.ini
+++ b/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 STSTStudentCourse.postman_collection.json=@STSTStudentCourse.postman_collection.json,0
 STSTStudentCourse.postman_collection .json -Task 7=@STSTStudentCourse.postman_collection .json -Task 7,0
+STSTStudentCourse.postman_collection (1).json - task 6=@STSTStudentCourse.postman_collection (1).json - task 6,0
