--- a/desktop.ini
+++ b/desktop.ini
@@ -2,3 +2,4 @@
 STSTStudentCourse.postman_collection.json=@STSTStudentCourse.postman_collection.json,0
 STSTStudentCourse.postman_collection .json -Task 7=@STSTStudentCourse.postman_collection .json -Task 7,0
 STSTStudentCourse.postman_collection (1).json - task 6=@STSTStudentCourse.postman_collection (1).json - task 6,0
+Task 8A .json=@Task 8A .json,0
